--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     background-color: transparent;
     z-index: 2;
+    
 
 }
 
@@ -59,4 +60,5 @@
     border-radius:30%;
     margin-top: 70px;
     margin-left: 6rem;
+    z-index: 2;
 }
