--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -2,8 +2,11 @@
     width: 100%;
     height: 100vh;
     background-color: white;
-  
+    background-image: url('../../assets/bannerhome.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 
 .banner_home{
     width: 100%;
