--- a/yoga/src/components/layout/FooterSection/Footer.module.css
+++ b/yoga/src/components/layout/FooterSection/Footer.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 20vh;
-    background-color: #222;
+    background-color: rgba(112, 74, 16, 0.648);
     justify-content: center;
     align-items: center;
 }
@@ -36,7 +36,7 @@
 }
 
 .social_list a{
-    color: rgb(234, 228, 228);
+    color: rgb(55, 53, 53);
 }
 
 .social_list a:hover{
