--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -1,6 +1,6 @@
 
 .menu__section{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     height: 10vh;
@@ -8,7 +8,6 @@
     align-items: center;
     background-color: transparent;
     z-index: 2;
-    
 
 }
 
@@ -17,7 +16,7 @@
     justify-content: center;
     align-items: center;
     z-index: 3;
-    
+    margin-right: 6rem;
 }
 
 .list{
@@ -25,7 +24,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    
     z-index: 2;
 }
 
@@ -55,10 +53,11 @@
 
 
 
-.logo__yoga{
-    width: 10rem;
-    border-radius:30%;
-    margin-top: 70px;
+.logo2{
+    width: 11rem;
+    margin-top: 5px;
+    padding: 6px;
     margin-left: 6rem;
     z-index: 2;
 }
+
