--- a/yoga/src/components/layout/FooterSection/Footer.module.css
+++ b/yoga/src/components/layout/FooterSection/Footer.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 20vh;
-    background-color: rgba(112, 74, 16, 0.648);
+    background-color: rgb(63, 43, 43);
     justify-content: center;
     align-items: center;
 }
@@ -36,9 +36,13 @@
 }
 
 .social_list a{
-    color: rgb(55, 53, 53);
+    color: rgb(227, 224, 224);
 }
 
 .social_list a:hover{
-    color: rgb(18, 97, 208);
+    color: rgb(106, 104, 24);
+}
+
+.copy{
+    color: rgb(227, 224, 224);
 }
