--- a/yoga/src/components/pages/AboutSection/About.module.css
+++ b/yoga/src/components/pages/AboutSection/About.module.css
@@ -1,5 +1,60 @@
 .about__container{
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     background-color: white;
+    margin: 0 auto;
+    align-items: flex-start;
+    position: relative;
+}
+
+.card__container__about img{
+    width: 17rem;
+    height: 20rem;
+    border-radius: 10px;
+    position: absolute;
+    left:14rem;
+    top:5rem
+}
+
+.card__container__about .card_um{
+    z-index: 1;
+}
+
+.card__container__about .card_dois{
+    
+    position: absolute;
+    top:22rem;
+    left: 28rem;
+    width: 17rem;
+    height: 20rem;
+    z-index: 0;
+}
+
+
+.about__container__description{
+    background-color: rgba(127, 122, 122, 0.157);
+    width: 35rem;
+    height: 33rem;
+    border-radius: 10px;
+    position: absolute;
+    top:7rem;
+    left: 12rem;
+}
+
+.about__container__description h2{
+    color:rgb(90, 64, 64);
+    letter-spacing: 2px;
+    font-size: 2rem;
+}
+
+.about__container__description .osmar{
+    position: absolute;
+    top:1rem;
+    left: 23rem;
+}
+
+.about__container__description .matilde{
+    position: absolute;
+    top: 19rem;
+    left: 4rem;
 }
