--- a/yoga/src/components/layout/FooterSection/Footer.module.css
+++ b/yoga/src/components/layout/FooterSection/Footer.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 20vh;
-    background-color: rgb(63, 43, 43);
+    background-color: rgba(19, 18, 18, 0.886);
     justify-content: center;
     align-items: center;
 }
