--- a/yoga/src/components/pages/AboutSection/About.module.css
+++ b/yoga/src/components/pages/AboutSection/About.module.css
@@ -1,21 +1,7 @@
 .about__container{
     width: 100%;
-    height: 300vh;
+    height: 290vh;
     background-color: white;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.desc__one__container{
-    width: 100%;
-    height:100vh;
-}
-
-
-.desc__two__container{
-    background-color: rgba(76, 33, 33, 0.887);
-    width: 100%;
-    height: 110vh;
+position: relative;
 }
