--- a/yoga/src/components/pages/AboutSection/BossCard.module.css
+++ b/yoga/src/components/pages/AboutSection/BossCard.module.css
@@ -1,3 +1,16 @@
+.boss__container{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.boss__geral{
+	position: absolute;
+	top:33rem;
+	left: 0rem;
+}
+
 .card__container__about img{
     width: 17rem;
     height: 20rem;
@@ -16,7 +29,6 @@
 }
 
 .card__container__about .card_dois{
-    
     position: absolute;
     top:22rem;
     left: 26rem;
@@ -55,10 +67,6 @@
     left: 4rem;
 }
 
-.boss__container{
-	position: absolute;
-    top:3rem;
-}
 
 @keyframes myAnim {
 	0% {
