--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -11,7 +11,7 @@
     align-items: center;
     position: relative;
     z-index: -2;
-    animation: myAnim_banner 5s ease-in-out 0.1s 1 normal forwards;
+    animation: myAnim_banner 8s ease-in-out 0s 1 normal forwards;
 
 }
 
@@ -46,10 +46,11 @@
     border-radius: 60px;
     width: 17rem;
     height: 17rem;
-    border-radius: 120px;
+    border-radius: 220px;
     position: absolute;
-    top:8rem;
-    animation: myAnim_logobanner 5s ease 0s 1 normal forwards;
+    top:13rem;
+	background-color: rgba(143, 134, 36, 0.756);
+    animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
 }
 
 @keyframes myAnim_logobanner {
