--- a/yoga/src/components/pages/DormSection/Dorm.module.css
+++ b/yoga/src/components/pages/DormSection/Dorm.module.css
@@ -1,5 +1,20 @@
 .dorm__container{
     width: 100%;
-    height: 100vh;
+    height: 280vh;
     background-color: white;
+}
+
+.dorm__container p{
+    margin: 1rem;
+    letter-spacing: 2px;
+    color:rgb(74, 34, 34);
+}
+
+.txt__dorm__container h3{
+    font-size: 1.7rem;
+}
+
+.txt__dorm__container{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
