--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -1,22 +1,73 @@
-.form__container{
+.contact__container{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    text-align: center;
+    background-color: rgba(11, 74, 14, 0.755);
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
 }
 
-.input_sec{
-    background-color: rgba(82, 82, 87, 0.601);
-    margin: 0.4rem;
-    border-radius:5px;
+@keyframes myAnim_logobanner {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
+.form{
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
     justify-content: flex-start;
-    color:white;
-    border: none;
+    align-items: flex-start;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 1.4rem;
+    height: 65vh;
+    text-align: center;
+    position: relative;
+    position: absolute;
+    left: 6rem;
+    top:11rem;
 }
 
-.input_sec::placeholder{
-    padding-left: 0.4rem;
+.label{
+    font-size: 1rem;
+    letter-spacing: 3px;
+    color:white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: start;
     
+}
+
+.input{
+    width: 190px;
+    height: 30px;
+    border-radius: 10px;
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: end;
+    flex-direction: row;
+}
+
+.txtarea{
+    display: flex;
+    flex-direction: column;
+    width: 340px;
+    height: 120px;
+    overflow-x: auto;
+    border-radius: 10px;
+    margin-top: 1rem;
+}
+
+Button{
+    position: absolute;
+    top: 25rem;
+    left: 8.5rem;
 }
