--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -66,8 +66,8 @@
     margin-top: 1rem;
 }
 
-Button{
+.btn_form Button{
     position: absolute;
     top: 25rem;
-    left: 8.5rem;
+    left: 7.7rem;
 }
