--- a/yoga/src/components/pages/DormSection/DormBanner.module.css
+++ b/yoga/src/components/pages/DormSection/DormBanner.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 70vh;
     background-color: rgb(0, 0, 0);
-    background-image: url('../../assets/chale2.png');
+    background-image: url('https://i.pinimg.com/originals/dc/81/8e/dc818e670f573e1016cd7556c880a14e.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 80%;
