--- a/yoga/src/components/pages/ContactSection/Contact.module.css
+++ b/yoga/src/components/pages/ContactSection/Contact.module.css
@@ -1,11 +1,19 @@
 .contact__container{
     width: 100%;
-    height: 100vh;
-    background-color: white;
-
+    height: 200vh;
+    background-color: rgba(217, 213, 207, 0.692);
+    animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
 }
 
+@keyframes myAnim_logobanner {
+	0% {
+		opacity: 0;
+	}
 
+	100% {
+		opacity: 1;
+	}
+}
 
 .pic_contact{
     display: flex;
