--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -1,24 +1,9 @@
-.contact__container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    background-color: rgba(11, 74, 14, 0.755);
-    height: 100vh;
-    width: 100%;
-    align-items: center;
-    position: relative;
-    animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
-}
-
-@keyframes myAnim_logobanner {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
+.formcontact__container{
+    margin-top: 5rem;
+    margin-left: 4rem;
+    width: 30vw;
+    background-color: rgb(60, 55, 47);
+    border-radius: 10px;
 }
 
 .form{
@@ -26,21 +11,17 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    border: 2px solid white;
+    border: 1px solid rgb(252, 252, 252);
     border-radius: 10px;
     padding: 1.4rem;
     height: 65vh;
     text-align: center;
-    position: relative;
-    position: absolute;
-    left: 6rem;
-    top:11rem;
 }
 
 .label{
     font-size: 1rem;
     letter-spacing: 3px;
-    color:white;
+    color:rgb(255, 255, 255);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: start;
     
@@ -54,6 +35,7 @@
     display: flex;
     justify-content: end;
     flex-direction: row;
+    color:rgb(255, 255, 255);
 }
 
 .txtarea{
@@ -64,10 +46,9 @@
     overflow-x: auto;
     border-radius: 10px;
     margin-top: 1rem;
+    color:rgb(0, 0, 0);
 }
 
 .btn_form Button{
-    position: absolute;
-    top: 25rem;
-    left: 7.7rem;
+    
 }
