--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -138,3 +138,47 @@
 }
 
 
+@media screen and (min-width:320px) and (max-width:589px){
+    .menu__section{
+        width: 100%;
+        height: 10vh;
+    }
+
+    .txt__home{
+        width: 0%;
+        height: 0vh;
+        overflow: hidden;
+    }
+
+    .navbar{
+        width: 80%;
+        height: 5vh;
+    }
+
+    .list{
+        width: 100%;
+        height: 5vh;
+    }
+
+    .item{
+
+        width: 100%;
+        height: 5vh;
+    }
+
+    .item a{
+        font-size: 0.6rem;
+    }
+
+    .btn_navbar{
+        width: 60px;
+        height: 30px;
+        border-radius: 15px;
+    }
+
+    .btn_navbar a{
+       font-size: 0.6rem;
+       padding: 1rem;
+       margin:0.3rem;
+    }
+}
