--- a/yoga/src/components/pages/HomeSection/Client.module.css
+++ b/yoga/src/components/pages/HomeSection/Client.module.css
@@ -2,5 +2,7 @@
     width: 100%;
     height: 100vh;
     background-color: white;
-    background-image: url('');
+    background-image: url('https://www.ilhacomprida.sp.leg.br/imagens/sitecmic/pagina_em_construcao2.png/image');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
