--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -15,3 +15,18 @@
 }
 
 
+@media screen and (min-width:320px) and (max-width:589px){
+    .home__section{
+        width: 100%;
+        height: 405vh;
+    }
+
+    .home__section button{
+        position: absolute;
+        font-size: 0.8rem;
+        top:21rem;
+        left: 12.2rem;
+        width: 100px;
+        height: 30px;
+    }
+}
