--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -1,18 +1,15 @@
 .home__section__one{
+	background-image: url('https://i.pinimg.com/originals/43/dd/17/43dd17d154e5d25f6b23d7ceb54d7585.jpg');
     width: 100%;
     height: 100vh;
-    background-image: url('https://i.pinimg.com/originals/43/dd/17/43dd17d154e5d25f6b23d7ceb54d7585.jpg');
+    background-color: rgb(0, 0, 0);
     background-repeat: no-repeat;
-    background-size:cover;
-    background-position: 30%;
-    filter:contrast(1.2);
+    background-size: cover;
+    filter: grayscale(0.3);
+    animation: myAnim_bannerabout 8s ease-in-out 0s 1 normal forwards;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    z-index: -2;
-    animation: myAnim_banner 8s ease-in-out 0s 1 normal forwards;
-
 }
 
 @keyframes myAnim_banner {
@@ -66,9 +63,6 @@
 
 
 
-.animation__txt__home{
-    animation: animate__slideInDown;
-}
 
 @keyframes myAnim {
 	0% {
@@ -115,4 +109,34 @@
 		transform: translateY(0px);
 	}
 }
+
+@media screen and (min-width:320px) and (max-width:589px){
+    .home__section{
+        width: 100%;
+        height: 430vh;
+    }
+
+	.home__section__one{
+        width: 100%;
+        height: 100vh;
+		background-position: 60%;
+    }
+
+    .home__section button{
+        position: absolute;
+        font-size: 0.8rem;
+        top:21rem;
+        left: 12.2rem;
+        width: 100px;
+        height: 30px;
+    }
+
+	.logo__banner{
+		width: 9rem;
+		height: 9rem;
+		position: absolute;
+		top:10rem;
+	}
+}
+
 
