--- a/yoga/src/components/pages/HomeSection/HomeTwo.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeTwo.module.css
@@ -49,3 +49,50 @@
     top:12rem;
     border-radius:  10px;
 }
+
+
+@media screen and (min-width:320px) and (max-width:589px){
+ 
+    .home__section__two{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .logo_apoio_home{
+        width: 6rem;
+        position: absolute;
+        left: 4rem;
+        top:0.5rem;
+        z-index: 1;
+    }
+
+    .container__home__section__two{
+        background-color: rgba(127, 122, 122, 0.157);
+        width: 60%;
+        height: 80%;
+        border-radius: 10px;
+        position: absolute;
+        right: 6rem;
+        top:3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    
+    .container__home__section__two p{
+        font-size: 0.8rem;
+        z-index: 2;
+        color: rgb(63, 43, 43);
+        margin-top: 2rem;
+    }
+    
+    .banner_apoio_home{
+        width: 80%;
+        position: absolute;
+        right: 16rem;
+        top:12rem;
+        border-radius:  10px;
+    }
+    
+}
