--- a/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
+++ b/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
@@ -27,3 +27,36 @@
     background-color: rgba(178, 193, 12, 0.448);
 }
 
+
+@media screen and (min-width:320px) and (max-width:589px){
+    .carousel__image img{
+        position: absolute;
+        top:-4rem;
+        height: 280px;
+        
+    }
+
+    .btn_back_home button{
+        position: absolute;
+        left: 8rem;
+        width: 90px;
+        height: 10px;
+    }
+    
+    .btn_next_home button {
+        position: absolute;
+        left: 19rem;
+        width: 90px;
+        height: 10px;
+    }
+    
+    .carousel__image button{
+        position: absolute;
+        top: 10rem;
+        left: 7.9rem;
+        font-size: 0.6rem;
+        color:white;
+        background-color: rgba(178, 193, 12, 0.448);
+    }
+    
+}
