--- a/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
+++ b/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
@@ -1,68 +1,43 @@
-.desc__two__container{
-    height: 75vh;
-}
 
 .description__hostel__two__container{
-    background-color: rgba(68, 72, 15, 0.787);
-    width: 75rem;
-    height: 33rem;
-    border-radius: 10px;
-    position: absolute;
-    right: 10rem;
-    top:92rem;
-    animation: myAnim 3.6s ease-in 0s 1 normal forwards;
+    margin-top:2rem;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@keyframes myAnim {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
+.section_two{
+    background-color: rgba(65, 56, 26, 0.727);
+    width: 80%;
+    height:90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
+    text-align: center;
+    border-radius: 10px;
+    padding: 1rem;
+   
 }
 
 
 .card__picture__about__two{
     display: flex;
     flex-direction: row;
-    margin:1rem;
-
 }
 
-.card__picture__about__two .img__apoio__about__description{
-    width: 24rem;
+.img__apoio__about__description{
+    width: 21rem;
     height: 16rem;
     border-radius: 30px ;
-    position: absolute;
-    left: 2rem;
-    top:-3rem;
     border: 2.3px white solid;
     padding: 0.5rem;
+    margin: 0.6rem;
 }
 
-.card__picture__about__two .img__apoio__about__description__dois{
-    width: 24rem;
-    height: 16rem;
-    border-radius: 30px ;
-    position: absolute;
-    left: 28rem;
-    top:-3rem;
-    border: 2.3px white solid;
-    padding: 0.5rem;
-}
-
-.card__picture__about__two .img__apoio__about__description__tres{
-    width: 24rem;
-    height: 16rem;
-    border-radius: 30px ;
-    position: absolute;
-    left: 54rem;
-    top:-3rem;
-    border: 2.3px white solid;
-    padding: 0.5rem;
-}
 
 .description__hostel__two__container p{
     color: rgba(255, 255, 255, 0.887);
@@ -71,5 +46,4 @@
     font-size: 19px;
     margin: 2rem;
     text-align: center;
-    margin-top: 17rem;
 }
