--- a/yoga/src/components/pages/AboutSection/Yoga.module.css
+++ b/yoga/src/components/pages/AboutSection/Yoga.module.css
@@ -1,5 +1,5 @@
 .yoga__container{
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: rgba(217, 213, 209, 0.897);
 }
