--- a/yoga/src/components/pages/AboutSection/AboutBanner.module.css
+++ b/yoga/src/components/pages/AboutSection/AboutBanner.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 70vh;
     background-color: rgb(0, 0, 0);
-    background-image: url('https://i.pinimg.com/originals/dc/81/8e/dc818e670f573e1016cd7556c880a14e.jpg');
+    background-image: url('https://a-static.besthdwallpaper.com/a-natural-house-in-the-forest-wallpaper-2400x1350-22165_50.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(0.3);
