--- a/yoga/src/components/pages/TrindadeSection/Trindade.module.css
+++ b/yoga/src/components/pages/TrindadeSection/Trindade.module.css
@@ -1,9 +1,7 @@
 .trindade__container{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
-    background-image: url('https://www.ilhacomprida.sp.leg.br/imagens/sitecmic/pagina_em_construcao2.png/image');
-    animation: myAnim_bannerabout 3s ease-in-out 0s 1 normal forwards;
 
 }
 
