--- a/yoga/src/components/pages/TrindadeSection/TrindadeBanner.module.css
+++ b/yoga/src/components/pages/TrindadeSection/TrindadeBanner.module.css
@@ -1,18 +1,15 @@
-.contact__banner__container{
+.trindadebanner__container{
     width: 100%;
     height: 70vh;
-    background-color: rgb(0, 0, 0);
-    background-image: url('https://cdn.wallpapersafari.com/35/79/qFO4kw.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: grayscale(0.3);
-    animation: myAnim_bannerabout 8s ease-in-out 0s 1 normal forwards;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: white;
+    background-image: url('https://a.travel-assets.com/findyours-php/viewfinder/images/res70/262000/262559-Ilha-Grande-Bay.jpg');
+    animation: myAnim_bannerabout 3s ease-in-out 0s 1 normal forwards;
+    background-position-x: 60%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 }
-
-
 
 @keyframes myAnim_bannerabout {
 	0% {
@@ -21,20 +18,20 @@
 	}
 
 	100% {
-		background-position: right end;
+		background-position: right center;
 		background-size: 120%;
 	}
 
 }
 
-.contact__banner__container h1{
-    z-index: 3;
+.trindadebanner__container h1{
     color:white;
     font-size: 5rem;
     font-weight: bold;
     letter-spacing: 3px;
     border-radius: 15px;
     text-transform: uppercase;
+	text-align: center;
     text-decoration: line-through;
     animation: myAnim_about 1s ease 0s 1 normal forwards;
 }
@@ -49,7 +46,7 @@
 	}
 }
 
-.contact__banner__container h1 span{
+.trindadebanner__container h1 span{
     font-size: 6rem;
     text-transform: lowercase;
 }
