--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -1,6 +1,6 @@
 .formcontact__container{
-    margin-top: 5rem;
-    margin-left: 4rem;
+    margin: 3rem;;
+    margin-left: 6rem;
     width: 30vw;
     background-color: rgb(60, 55, 47);
     border-radius: 10px;
