--- a/yoga/src/components/layout/ButtonSection/Button.module.css
+++ b/yoga/src/components/layout/ButtonSection/Button.module.css
@@ -24,17 +24,19 @@ button{
 
 
 
-button:hover{
+.btn_menu button:hover{
     cursor: pointer;
     background-color: rgb(138, 131, 4);
+    text-decoration: none;
 }
 
-button a{
+.btn_menu button a{
     text-decoration: none;
     color:rgb(255, 255, 255);
 }
 
-button a:hover{
+.btn_menu button a:hover{
     cursor: pointer;
+    text-decoration: none;
 }
 
