--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -1,4 +1,6 @@
 
+@media screen and (min-width: 610px){
+
 .menu__section{
     width: 100%;
     display: flex;
@@ -137,48 +139,76 @@
     cursor: pointer;
 }
 
-
-@media screen and (min-width:320px) and (max-width:589px){
-    .menu__section{
-        width: 100%;
-        height: 10vh;
-    }
-
-    .txt__home{
-        width: 0%;
-        height: 0vh;
-        overflow: hidden;
-    }
-
-    .navbar{
-        width: 80%;
-        height: 5vh;
-    }
-
-    .list{
-        width: 100%;
-        height: 5vh;
-    }
-
-    .item{
-
-        width: 100%;
-        height: 5vh;
-    }
-
-    .item a{
-        font-size: 0.6rem;
-    }
-
-    .btn_navbar{
-        width: 60px;
-        height: 30px;
-        border-radius: 15px;
-    }
-
-    .btn_navbar a{
-       font-size: 0.6rem;
-       padding: 1rem;
-       margin:0.3rem;
-    }
+.logo__mobile{
+    display:none ;
 }
+
+.section__mobile__div{
+    display: none;
+}
+}
+
+@media screen and (max-width: 600px) {
+    
+
+    .navbar {
+        display: none;
+      }
+      
+      @media screen and (max-width: 600px) {
+        header button {
+          display: block;
+        }
+      
+        nav {
+          display: block;
+          position: absolute;
+          top: 60px;
+          right: 0;
+          background-color: white;
+          padding: 20px;
+          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+        }
+      }
+
+     .menu__section{
+       display: flex;
+       justify-content: space-between;
+       background-color: rgb(240, 233, 233);
+       align-items: center;
+       text-align: center;
+      }
+
+      .txt__home{
+        display: none;
+      }
+
+      .section__mobile__div{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .logo__mobile{
+        border-radius: 60px;
+        width: 6rem;
+        height: 6rem;
+        border-radius: 100px;
+        padding: 1rem;
+        background-color: rgba(143, 134, 36, 0.756);
+        animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
+        margin-left: 2rem;
+    }
+    
+    @keyframes myAnim_logobanner {
+        0% {
+            opacity: 0;
+        }
+    
+        100% {
+            opacity: 1;
+        }
+    }
+
+  }
