--- a/yoga/src/components/pages/ContactSection/Contact.module.css
+++ b/yoga/src/components/pages/ContactSection/Contact.module.css
@@ -1,8 +1,13 @@
 .contact__container{
     width: 100%;
-    height: 200vh;
+    height: 100%;
     background-color: rgba(217, 213, 207, 0.692);
     animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+
 }
 
 @keyframes myAnim_logobanner {
@@ -15,7 +20,3 @@
 	}
 }
 
-.pic_contact{
-    display: flex;
-    justify-content: space-evenly;
-}
