--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -8,25 +8,15 @@
     top:30rem;
     left: 43.5rem;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .home__section Button:hover{
     background-color: rgb(138, 131, 4);
+    text-decoration: none;
 }
 
 
 @media screen and (min-width:320px) and (max-width:589px){
-    .home__section{
-        width: 100%;
-        height: 405vh;
-    }
 
-    .home__section button{
-        position: absolute;
-        font-size: 0.8rem;
-        top:21rem;
-        left: 12.2rem;
-        width: 100px;
-        height: 30px;
-    }
 }
