--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -1,7 +1,7 @@
 .home__section__one{
 	background-image: url('https://i.pinimg.com/originals/43/dd/17/43dd17d154e5d25f6b23d7ceb54d7585.jpg');
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     background-color: rgb(0, 0, 0);
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,6 +37,7 @@
     color:rgb(36, 36, 35);
     text-decoration: none;  
     cursor: pointer;
+	text-decoration: none;
 }
 
 .logo__banner{
@@ -111,32 +112,7 @@
 }
 
 @media screen and (min-width:320px) and (max-width:589px){
-    .home__section{
-        width: 100%;
-        height: 430vh;
-    }
 
-	.home__section__one{
-        width: 100%;
-        height: 100vh;
-		background-position: 60%;
-    }
-
-    .home__section button{
-        position: absolute;
-        font-size: 0.8rem;
-        top:21rem;
-        left: 12.2rem;
-        width: 100px;
-        height: 30px;
-    }
-
-	.logo__banner{
-		width: 9rem;
-		height: 9rem;
-		position: absolute;
-		top:10rem;
-	}
 }
 
 
