--- a/yoga/src/components/pages/HomeSection/HomeTwo.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeTwo.module.css
@@ -35,11 +35,22 @@
     justify-content: flex-start;
 }
 
-.container__home__section__two p{
-    font-size: 1.4rem;
+.container__home__section__two h2{
+    font-size: 1.7rem;
+    letter-spacing: 2px;
     z-index: 2;
     color: rgb(63, 43, 43);
-    margin-top: 2rem;
+    margin-top: 1rem;
+}
+
+
+.container__home__section__two p{
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    z-index: 1;
+    color: rgb(63, 43, 43);
+    margin-top: 1rem;
+    padding: 1rem;
 }
 
 .banner_apoio_home{
