--- a/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
+++ b/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
@@ -20,11 +20,12 @@
 
 .depoiment{
     background-color: rgba(128, 128, 128, 0.446);
-    width: 90%;
-    height: 30%;
-    border-radius: 5px;
+    width: 100%;
+    height: 40%;
+    border-radius: 20px;
     text-align: center;
     display: flex;
+    padding: 1rem;
     justify-content: center;
     align-items: center;
 }
