--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -9,6 +9,12 @@
     left: 43.5rem;
     text-transform: uppercase;
     text-decoration: none;
+    
+}
+
+.home__section a{
+    text-decoration: none;
+    color: white;
 }
 
 .home__section Button:hover{
