--- a/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
+++ b/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
@@ -21,13 +21,14 @@
 .depoiment{
     background-color: rgba(128, 128, 128, 0.446);
     width: 100%;
-    height: 40%;
+    height: 50vh;
     border-radius: 20px;
     text-align: center;
     display: flex;
-    padding: 1rem;
+    padding: 0.5rem;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
 }
 
 .card__unity p{
