--- a/yoga/src/components/pages/AboutSection/About.module.css
+++ b/yoga/src/components/pages/AboutSection/About.module.css
@@ -1,7 +1,7 @@
 .about__container{
     width: 100%;
-    height: 290vh;
+    height: 100%;
     background-color: white;
     margin: 0 auto;
-position: relative;
 }
+
