--- a/yoga/src/components/pages/AboutSection/BossCard.module.css
+++ b/yoga/src/components/pages/AboutSection/BossCard.module.css
@@ -1,9 +1,3 @@
-.boss__container{
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: space-evenly;
-}
 
 .boss__geral{
 	position: absolute;
@@ -40,31 +34,34 @@
 
 
 .about__container__description{
-    background-color: rgba(127, 122, 122, 0.157);
+    background-color: rgba(216, 214, 214, 0);
     width: 35rem;
     height: 33rem;
-    border-radius: 10px;
+    border-radius: 6px;
     position: absolute;
     top:7rem;
     left: 10rem;
+	z-index: 0;
 }
 
 .about__container__description h2{
     color:rgb(90, 64, 64);
     letter-spacing: 2px;
-    font-size: 2rem;
+    font-size: 1.6rem;
+	
 }
 
 .about__container__description .osmar{
     position: absolute;
     top:1rem;
-    left: 23rem;
+    left: 24rem;
 }
 
 .about__container__description .matilde{
     position: absolute;
     top: 19rem;
-    left: 4rem;
+    left: 5rem;
+	z-index: 2;
 }
 
 
