--- a/yoga/src/components/pages/HomeSection/CarouselHome.module.css
+++ b/yoga/src/components/pages/HomeSection/CarouselHome.module.css
@@ -1,5 +1,10 @@
 .carousel__home{
     position: absolute;
-    left: -6rem;
-    top:13rem;
+    left: -3rem;
+    top:16rem;
+}
+
+@media screen and (min-width:320px) and (max-width:589px){
+ 
+    
 }
