--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -1,15 +1,31 @@
 .home__section{
     width: 100%;
-    height: 330vh;
+    height: 100%;
 }
 
 .home__section Button{
     position: absolute;
-    top:33rem;
+    top:30rem;
+    left: 43.5rem;
     text-transform: uppercase;
+    text-decoration: none;
+    
+}
+
+.home__section a{
+    text-decoration: none;
+    color: white;
 }
 
 .home__section Button:hover{
     background-color: rgb(138, 131, 4);
+    text-decoration: none;
 }
 
+
+@media (min-width: 320px) and (max-width: 600px){
+    .home__section Button{
+       display: none;
+        
+    }
+}
