--- a/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
+++ b/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
@@ -5,25 +5,46 @@
     padding: 1rem;
 }
 
-.btn_back_home  {
-    position: absolute;
-    left: 13rem;
-    width: 90px;
-    height: 20px;
-}
-
-.btn_next_home  {
-    position: absolute;
-    left: 19rem;
-    width: 90px;
-    height: 20px;
-}
 
 .carousel__image button{
     position: absolute;
-    top: 25rem;
+    top: 24rem;
+    left: 14rem;
     font-size: 0.6rem;
     color:white;
-    background-color: rgba(181, 177, 171, 0.448);
+    background-color: rgba(8, 8, 7, 0.448);
 }
 
+
+@media screen and (min-width:320px) and (max-width:589px){
+    .carousel__image img{
+        position: absolute;
+        top:-4rem;
+        height: 280px;
+        
+    }
+
+    .btn_back_home button{
+        position: absolute;
+        left: 8rem;
+        width: 90px;
+        height: 10px;
+    }
+    
+    .btn_next_home button {
+        position: absolute;
+        left: 29rem;
+        width: 90px;
+        height: 10px;
+    }
+    
+    .carousel__image button{
+        position: absolute;
+        top: 10rem;
+        left: 8.9rem;
+        font-size: 0.6rem;
+        color:white;
+        background-color: rgba(178, 193, 12, 0.448);
+    }
+    
+}
