--- a/yoga/src/components/pages/TrindadeSection/Trindade.module.css
+++ b/yoga/src/components/pages/TrindadeSection/Trindade.module.css
@@ -1,5 +1,19 @@
 .trindade__container{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
+
+}
+
+@keyframes myAnim_bannerabout {
+	0% {
+		background-position: right center;
+		background-size: 100%;
+	}
+
+	100% {
+		background-position: right center;
+		background-size: 120%;
+	}
+
 }
