--- a/yoga/src/components/layout/ButtonSection/Button.module.css
+++ b/yoga/src/components/layout/ButtonSection/Button.module.css
@@ -41,3 +41,9 @@ button{
     text-decoration: none;
 }
 
+
+@media (min-width: 320px) and (max-width: 600px){
+    .btn_menu button{
+        display: none;
+    }
+}
