--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -1,5 +1,4 @@
 
-@media screen and (min-width: 610px){
 
 .menu__section{
     width: 100%;
@@ -146,7 +145,7 @@
 .section__mobile__div{
     display: none;
 }
-}
+
 
 @media (min-width: 320px) and (max-width: 600px){
 
@@ -182,38 +181,37 @@
     }
 
     .logo__mobile{
-        width: 80px;
-        border-radius: 200px;
-        background-color: rgba(143, 134, 36, 0.756);
-        position: absolute;
-        left: 2rem;
+        display: none;
         
     }
 
 
+
 }
-@media screen and (max-width: 600px) {
-    
+
+@media (min-width: 320px) and (max-width: 600px) {
+
 
     .navbar {
         display: none;
+        height: 10vh;
       }
       
-      @media screen and (max-width: 600px) {
         header button {
           display: block;
+
         }
       
         nav {
           display: block;
           position: absolute;
-          top: 60px;
+          top: 45px;
           right: 0;
           background-color: white;
           padding: 20px;
           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
         }
-      }
+      
 
      .menu__section{
        display: flex;
@@ -221,28 +219,28 @@
        background-color: rgb(240, 233, 233);
        align-items: center;
        text-align: center;
+       width: 100%;
+       height: 15vh;
       }
 
-      .txt__home{
-        display: none;
-      }
 
       .section__mobile__div{
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
+        
       }
 
       .logo__mobile{
         border-radius: 60px;
-        width: 6rem;
+        width: 16rem;
         height: 6rem;
         border-radius: 100px;
         padding: 1rem;
         background-color: rgba(143, 134, 36, 0.756);
         animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
-        margin-left: 2rem;
+        margin-left: 1rem;
     }
     
     @keyframes myAnim_logobanner {
@@ -255,4 +253,4 @@
         }
     }
 
-  }
+}
