--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -5,7 +5,8 @@
 
 .home__section Button{
     position: absolute;
-    top:33rem;
+    top:32rem;
+    left: 43.6rem;
     text-transform: uppercase;
     text-decoration: none;
     
@@ -20,3 +21,8 @@
     background-color: rgb(138, 131, 4);
 }
 
+@media (min-width: 320px) and (max-width: 800px){
+    .home__section button{
+        display: none;
+    }
+}
