--- a/yoga/src/components/pages/AboutSection/AboutSectionOne.module.css
+++ b/yoga/src/components/pages/AboutSection/AboutSectionOne.module.css
@@ -5,3 +5,13 @@
 	justify-content: space-evenly;
 	background-color: rgba(241, 239, 239, 0.837);
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+.aboutsecone__container{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: space-evenly;
+	background-color: rgba(241, 239, 239, 0.837);
+}
+}
