--- a/yoga/src/components/pages/TrindadeSection/TrindadeBanner.module.css
+++ b/yoga/src/components/pages/TrindadeSection/TrindadeBanner.module.css
@@ -50,3 +50,19 @@
     font-size: 6rem;
     text-transform: lowercase;
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+	.trindadebanner__container{
+		width: 100%;
+		height: 70vh;
+		background-color: white;
+		background-image: url('https://a.travel-assets.com/findyours-php/viewfinder/images/res70/262000/262559-Ilha-Grande-Bay.jpg');
+		animation: myAnim_bannerabout_mob 3s ease-in-out 0s 1 normal forwards;
+		background-position-x: 0%;
+		background-size: cover;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	
+	}
+}
