--- a/yoga/src/App.css
+++ b/yoga/src/App.css
@@ -26,3 +26,11 @@ html{
 }
 
 
+@media screen and (min-width:320px) and (max-width:560px){
+  h1{
+    color:white;
+        letter-spacing: 2px;
+        font-size: 0.8rem;
+  }
+}
+
