--- a/yoga/src/components/layout/MenuMobile/ButtonMobile.module.css
+++ b/yoga/src/components/layout/MenuMobile/ButtonMobile.module.css
@@ -5,6 +5,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    right: 0;
+    top:-0.5rem;
 }
 
 
