--- a/yoga/src/components/pages/AboutSection/AboutBanner.module.css
+++ b/yoga/src/components/pages/AboutSection/AboutBanner.module.css
@@ -51,3 +51,61 @@
     font-size: 6rem;
     text-transform: lowercase;
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+
+    .about__banner__container{
+        width: 100%;
+        height: 70vh;
+        background-color: rgb(0, 0, 0);
+        background-image: url('https://a-static.besthdwallpaper.com/a-natural-house-in-the-forest-wallpaper-2400x1350-22165_50.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(0.3);
+        animation: myAnim_bannerabout_mob 8s ease-in-out 0s 1 normal forwards;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    @keyframes myAnim_bannerabout {
+        0% {
+            background-position: right center;
+            background-size: 100%;
+        }
+    
+        100% {
+            background-position: right center;
+            background-size: 120%;
+        }
+    
+    }
+    
+    .about__banner__container h1{
+        z-index: 3;
+        color:white;
+        font-size: 5rem;
+        font-weight: bold;
+        letter-spacing: 3px;
+        border-radius: 15px;
+        text-transform: uppercase;
+        text-decoration: line-through;
+        animation: myAnim_about 1s ease 0s 1 normal forwards;
+    }
+    
+    @keyframes myAnim_about {
+        0% {
+            opacity: 0;
+        }
+    
+        100% {
+            opacity: 1;
+        }
+    }
+    
+    .about__banner__container h1 span{
+        font-size: 6rem;
+        text-transform: lowercase;
+    }
+
+}
