--- a/yoga/src/components/pages/ContactSection/Contact.module.css
+++ b/yoga/src/components/pages/ContactSection/Contact.module.css
@@ -20,3 +20,15 @@
 	}
 }
 
+@media screen and (min-width:320px) and (max-width:560px){
+    .contact__container{
+        width: 100%;
+        height: 200vh;
+        background-color: rgba(217, 213, 207, 0.692);
+        animation: myAnim_logobanner_mob 3s ease 0s 1 normal forwards;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+}
+}
