--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -52,3 +52,83 @@
 .btn_form Button{
     
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+
+    .formcontact__container{
+        margin: 4rem;;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(60, 55, 47);
+        border-radius: 10px;
+    }
+    
+    .form{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        border: none;
+        border-radius: 10px;
+        padding: 1.4rem;
+        height: 65vh;
+        text-align: center;
+    }
+    
+    .label{
+        font-size: 1rem;
+        letter-spacing: 3px;
+        color:rgb(255, 255, 255);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: start;
+        
+    }
+    
+    .input{
+        width: 190px;
+        height: 30px;
+        border-radius: 10px;
+        margin-top: 0.5rem;
+        display: flex;
+        justify-content: end;
+        flex-direction: row;
+        color:rgb(255, 255, 255);
+    }
+    
+    .txtarea{
+        display: flex;
+        flex-direction: column;
+        width: 340px;
+        height: 120px;
+        overflow-x: auto;
+        border-radius: 10px;
+        margin-top: 1rem;
+        color:rgb(0, 0, 0);
+    }
+    
+    .btn_menu{
+        margin-top: 2rem;
+        background-color: gray;
+        border-radius: 5px;
+        text-decoration: none;
+        border: none;
+
+    }
+        
+    .btn_menu button a{
+        text-decoration: none;
+        color:white;
+        border: none;
+
+    }
+
+    .btn_menu Button:hover{
+        background-color: rgb(138, 131, 4);
+        text-decoration: none;
+        list-style: none;
+        border: none;
+    }
+
+}
