--- a/yoga/src/components/pages/DormSection/DormBanner.module.css
+++ b/yoga/src/components/pages/DormSection/DormBanner.module.css
@@ -51,3 +51,20 @@
     font-size: 6rem;
     text-transform: lowercase;
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+
+    .dorm__banner{
+        width: 100%;
+        height: 70vh;
+        background-color: rgb(0, 0, 0);
+        background-image: url('https://i.pinimg.com/originals/dc/81/8e/dc818e670f573e1016cd7556c880a14e.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 80%;
+        animation: myAnim_bannerabout_mob 8s ease-in-out 0s 1 normal forwards;
+        display: flex;
+        justify-content: center;
+    
+}
+}
