--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -62,3 +62,19 @@
 
 
 
+@media screen and (min-width: 320px) and (max-width: 560px) {
+
+    .home__section__one{
+        background-image: url('https://i.pinimg.com/originals/43/dd/17/43dd17d154e5d25f6b23d7ceb54d7585.jpg');
+        width: 100%;
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(0.3);
+        animation: myAnim_bannerhome_resp 5s ease-in-out 0s 1 normal forwards;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
