--- a/yoga/src/components/pages/HomeSection/HomeTwo.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeTwo.module.css
@@ -62,7 +62,7 @@
 }
 
 
-@media screen and (min-width:320px) and (max-width:589px){
+@media screen and (min-width: 320px) and (max-width: 560px) {
  
     .home__section__two{
         width: 100%;
@@ -73,7 +73,7 @@
         width: 6rem;
         position: absolute;
         left: 4rem;
-        top:0.5rem;
+        top:-1.3rem;
         z-index: 1;
     }
 
@@ -92,9 +92,9 @@
     }
     
     .container__home__section__two p{
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         color: rgb(63, 43, 43);
-        margin-top: 2rem;
+        margin-top:0rem;
     }
     
     .banner_apoio_home{
@@ -103,6 +103,13 @@
         right: 16rem;
         top:12rem;
         border-radius:  10px;
+    }
+
+    .container__home__section__two h2{
+        font-size: 1.5rem;
+        letter-spacing: 4px;
+        color: rgb(63, 43, 43);
+        margin-top: 2rem;
     }
     
 }
