--- a/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
+++ b/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
@@ -44,3 +44,56 @@
 .card__unity img{
     width: 100px;
 }
+
+@media screen and (min-width:320px) and (max-width:560px){
+
+    .card__testimonials{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    .card__unity{
+    
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        margin-top:2.5rem;
+    }
+    
+    .depoiment{
+        background-color: rgba(128, 128, 128, 0.446);
+        width: 100%;
+        height: 50vh;
+        border-radius: 20px;
+        text-align: center;
+        display: flex;
+        padding: 0.5rem;
+        justify-content: center;
+        align-items: center;
+        margin-top: 1rem;
+    }
+    
+    .card__unity p{
+        color:white;
+        font-size: 0.6rem;
+    }
+    
+    .card__unity h2{
+        color:white;
+        letter-spacing: 2px;
+        font-size: 0.8rem;
+    }
+    
+    .card__unity img{
+        width: 60px;
+        margin-bottom: 0.3rem;
+    }
+
+}
