--- a/yoga/src/components/pages/HomeSection/Testimonials.module.css
+++ b/yoga/src/components/pages/HomeSection/Testimonials.module.css
@@ -28,4 +28,18 @@
     margin: 0rem;
 }
 
+@media screen and (min-width:320px) and (max-width:560px){
+    .testimonials__container{
+       
+    }
+    
+    .testimonials__container h1{
+      font-size: 1.4rem;
+    }
+    
+    
+    .card__container{
 
+    }
+
+}
