--- a/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
+++ b/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
@@ -9,7 +9,7 @@
 }
 
 .section_two{
-    background-color: rgba(65, 56, 26, 0.727);
+    background-color: rgba(223, 221, 215, 0.727);
     width: 80%;
     height:90%;
     display: flex;
@@ -33,14 +33,14 @@
     width: 21rem;
     height: 16rem;
     border-radius: 30px ;
-    border: 2.3px white solid;
+    border: 2.3px rgba(211, 171, 11, 0.898) solid;
     padding: 0.5rem;
     margin: 0.6rem;
 }
 
 
 .description__hostel__two__container p{
-    color: rgba(255, 255, 255, 0.887);
+    color: rgba(27, 15, 15, 0.887);
     letter-spacing: 2px;
     line-height: 36px;
     font-size: 19px;
