--- a/yoga/src/components/pages/ContactSection/FormContact.module.css
+++ b/yoga/src/components/pages/ContactSection/FormContact.module.css
@@ -1,6 +1,6 @@
 .formcontact__container{
     margin: 3rem;;
-    margin-left: 6rem;
+    margin-left: 0rem;
     width: 30vw;
     background-color: rgb(60, 55, 47);
     border-radius: 10px;
@@ -49,8 +49,20 @@
     color:rgb(0, 0, 0);
 }
 
-.btn_form Button{
-    
+.btn_menu Button{
+    background-color: rgb(229, 229, 15);;
+}
+
+.btn_menu Button:hover{
+    transition: 0.6s;
+    scale: 1.05;
+}
+
+.form_conteiner_geral{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 @media screen and (min-width:320px) and (max-width:560px){
@@ -117,7 +129,7 @@
 
     }
         
-    .btn_menu button a{
+    .btn_menu Button a{
         text-decoration: none;
         color:white;
         border: none;
