--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -42,11 +42,10 @@
     border-radius: 60px;
     width: 15rem;
     height: 15rem;
-    border-radius: 100px;
-	padding: 1.5rem;
+	padding: 0rem;
     position: absolute;
     top:13rem;
-	background-color: rgba(143, 134, 36, 0.756);
+	box-shadow: 0px 5px 16px 1px rgba(143, 134, 36, 0.756);
     animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
 }
 
