--- a/yoga/src/components/pages/HomeSection/HomeTwo.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeTwo.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 130vh;
     background-color: rgb(242, 240, 237);
-    
+    background-image: url('');
     background-repeat: no-repeat;
     background-size:contain;
     background-position: 20%;
@@ -23,6 +23,7 @@
 
 .container__home__section__two{
     background-color: rgba(37, 35, 35, 0.149);
+    background-image: url('https://img.freepik.com/fotos-premium/textura-de-fundo-de-papel-granulado-cinza-velho_271293-3.jpg?w=2000');
     width: 60%;
     height: 70%;
     border-radius: 10px;
@@ -36,8 +37,11 @@
 }
 
 .container__home__section__two h2{
-    font-size: 1.7rem;
-    letter-spacing: 2px;
+    font-size: 2rem;
+    letter-spacing: 3px;
+    border: 2px solid rgb(181, 172, 14);
+    border-radius: 5px;
+    padding: 0.5rem;
     z-index: 2;
     color: rgb(41, 25, 25);
     margin-top: 1rem;
