--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: row;
     height: 10vh;
-    justify-content: space-between;
     align-items: center;
     background-color: transparent;
     z-index: 3;
@@ -15,17 +14,28 @@
 
 .menu__section:hover{
     background-color: rgba(242, 240, 237, 0.905);
-
+    cursor: pointer;
     transition: 0.4s;
 }
 
 .navbar{
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    z-index: 3;
-    margin-right: 6rem;
-    
+    margin:3rem;
+}
+
+
+.txt_logo h2{
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: rgb(50, 32, 32);
+    font-size: 2rem;
+}
+
+.txt_logo p{
+    letter-spacing: 8px;
 }
 
 .list{
@@ -33,7 +43,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    z-index: 2;
 }
 
 .list Button{
@@ -83,56 +92,8 @@
 }
 
 
-.txt__home{
-    display: flex;
-    flex-direction: column;
-    width: 20rem;
-    border-radius: 20px;
-    padding: 0.7rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    animation: myAnim 3s ease 0s 1 normal forwards;
-    margin-left: 3rem;
-    margin-top: 0rem;
-}
-
-.txt__home link{
-    text-decoration: none;
-}
-
-.txt__home h1{
-    font-size: 1rem;
-    letter-spacing: 2px;
-    color:rgb(194, 173, 15);
-    font-weight: bold;
-}
-
-.txt__home h1 span{
-    color: rgb(72, 61, 38);
-    font-weight: bold;
-    font-size: 1.2rem;
-    margin: 0.5rem;
-}
-
-.txt__home p{
-    font-size: 0.8rem;
-    font-weight: 300;
-    letter-spacing: 16px;
-    text-transform: lowercase;
-    color:rgb(194, 173, 15);
-    font-weight: bold;
-}
 
 
-.logo__nav{
-    width: 13rem;
-    margin-top: 40px;
-    padding: 6px;
-    margin-left: 1rem;
-    z-index: 2;
-    border-radius: 40px;
-    filter:contrast(1.6)
-}
 
 
 .logo__mobile{
@@ -147,11 +108,6 @@
     display: none;
 }
 
-.logo__mob{
-    width: 8rem;
-        margin-left: 0.5rem;
-        margin-top: 5rem;
-}
 
 
 @media (min-width: 320px) and (max-width: 700px) {
