--- a/yoga/src/components/pages/HomeSection/Home.module.css
+++ b/yoga/src/components/pages/HomeSection/Home.module.css
@@ -1,16 +1,10 @@
 .home__section{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.home__section Button{
-    position: absolute;
-    top:32rem;
-    left: 43.6rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    
-}
 
 .home__section a{
     text-decoration: none;
