--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -29,6 +29,12 @@
     width: 100%;
 }
 
+.home__section__one Button{
+    text-transform: uppercase;
+    text-decoration: none;
+    
+}
+
 
 .menu__banner a{
     font-size: 1.5rem;
