--- a/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
+++ b/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
@@ -33,7 +33,7 @@
     width: 21rem;
     height: 16rem;
     border-radius: 30px ;
-    border: 2.3px rgba(211, 171, 11, 0.898) solid;
+    border: 2px solid rgb(96, 93, 21);
     padding: 0.5rem;
     margin: 0.6rem;
 }
