--- a/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
+++ b/yoga/src/components/pages/HomeSection/ImageCarousel.module.css
@@ -1,7 +1,7 @@
 .carousel__image img{
     border-radius: 35px;
     height: 460px;
-    border: 2px solid rgb(181, 172, 14);
+    border: 2px solid rgb(96, 93, 21);
     padding: 1rem;
 }
 
@@ -15,6 +15,33 @@
     background-color: rgba(8, 8, 7, 0.448);
 }
 
+.btn_change_dorm_left{
+    background-color: rgb(66, 45, 17);
+    color:white;
+    width: 4rem;
+    margin-right: 5rem;
+
+}
+
+.btn_change_dorm_right{
+    background-color: rgb(66, 45, 17);
+    color:white;
+    width: 4rem;
+    margin-left: 5rem;
+
+ 
+}
+
+.btn_change_dorm_right:hover{
+    background-color: rgb(138, 81, 8);
+    width: 4rem;
+
+}
+
+.btn_change_dorm_left:hover{
+    background-color: rgb(138, 81, 8);
+    width: 4rem;
+}
 
 @media screen and (min-width:320px) and (max-width:560px){
     .carousel__image img{
