--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -59,7 +59,24 @@
 
 
 
+.logo_home{
+    opacity: 70%;
+    animation: myAnim_bannerhomehome_logo 10s ease-in-out 0s 1 normal forwards;
+}
 
+
+@keyframes myAnim_bannerhomehome_logo {
+	0% {
+		background-position: right center;
+		background-size: 100%;
+	}
+
+	100% {
+		background-position: right center;
+		background-size: 150%;
+	}
+
+}
 
 
 
